--- a/src/main/webapp/mobile/asset/onlineregs/business.html
+++ b/src/main/webapp/mobile/asset/onlineregs/business.html
@@ -349,6 +349,9 @@
 						license = licenseData[0].license;
 						$('#license').val(license);
 						$('#phone').val(licenseData[0].phone);
+						$('#name').val(licenseData[0].name);
+						$('#idcard').val(licenseData[0].id_number);
+						$('#license').val(licenseData[0].license);
 					}
 				}
 			});
