--- a/src/main/webapp/mobile/asset/onlineregs/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/index.html
@@ -18,6 +18,7 @@
 	.demos-title {
 		text-align: center;
 		font-size: 25px;
+		height:50px;
 	}
 
 	a {
@@ -29,7 +30,7 @@
 	}
 
 	.weui-grid {
-		width: 32.3333333%;
+		width: 32.1333333%;
 	}
 </style>
 
