--- a/src/main/webapp/mobile/asset/onlineregs/sucess.html
+++ b/src/main/webapp/mobile/asset/onlineregs/sucess.html
@@ -71,7 +71,7 @@
         </label>
     </div>
     <div class="footer">
-        <a href="index.html" onclick="" class="weui-btn_mini weui-btn weui-btn_warn">关 闭</a>
+        <a href="../index.html" onclick="" class="weui-btn_mini weui-btn weui-btn_warn">关 闭</a>
     </div>
     </div>
 </body>
