--- a/src/main/webapp/mobile/asset/onlineregs/transact/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/transact/index.html
@@ -387,7 +387,7 @@
                     var result = obj.result;
                     var lat = result[0].y;
                     var lng = result[0].x;
-                    location.href = "transact.html?license=" + license + "&latitude=" + lat + "&longitude=" + lng;
+                    location.href = "precontract.html?license=" + license + "&latitude=" + lat + "&longitude=" + lng;
                 });
 
             },
